--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -19,6 +19,11 @@ footer {
     color: #fff;
     font-weight: bold;
   }
+  @include sp {
+    font-size: 10px;
+    padding: 0 10px;
+    margin-bottom: 5px;
+  }
 }
 
 .copyright {
