--- a/scss/_lib.scss
+++ b/scss/_lib.scss
@@ -31,10 +31,16 @@ $main-fc: #333;
 
 #contents {
   padding: 60px 0 100px;
+  @include sp {
+    padding: 40px 0;
+  }
 }
 
 .section {
   padding-top: 2.5rem;
+  @include sp {
+    padding-top: 0;
+  }
 }
 
 .inner {
@@ -42,11 +48,17 @@ $main-fc: #333;
   width: 100%;
   margin: 0 auto;
   padding: 0 10px;
+  @include sp {
+    padding: 36px 15px;
+  }
 }
 
 .section-title-block {
   text-align: center;
   margin-bottom: 30px;
+  @include sp {
+    margin-bottom: 10px;
+  }
 }
 
 .section-title {
@@ -59,6 +71,9 @@ $main-fc: #333;
   font-weight: bold;
   margin-bottom: 10px;
   color: #444;
+  @include sp {
+    font-size: 36px;
+  }
   &::before, &::after {
     border-top: 1px solid;
     content: "";
