--- a/css/main.css
+++ b/css/main.css
@@ -323,6 +323,29 @@ img {
   margin-bottom: 1rem;
   color: #0077bf; }
 
+.works-movie-des {
+  text-align: center;
+  font-size: 15px;
+  color: gray; }
+
+.works-movie-wrapper {
+  padding: 20px 80px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; }
+  @media screen and (max-width: 600px) {
+    .works-movie-wrapper {
+      padding: 20px 10px; } }
+
+.works-movie-card {
+  width: 45%; }
+  .works-movie-card video {
+    width: 100%; }
+  @media screen and (max-width: 600px) {
+    .works-movie-card {
+      width: 100%;
+      padding-bottom: 15px; } }
+
 .contact-title {
   margin-bottom: 35px; }
 
