sp レスポンシブ修正2

--- a/css/main.css
+++ b/css/main.css
@@ -176,6 +176,9 @@ header {
   color: #fff;
   letter-spacing: -2px;
   margin: 0 auto; }
+  @media screen and (max-width: 600px) {
+    .logo {
+      font-size: 56px; } }
 
 #nav-menu {
   padding: 10px;
@@ -194,6 +197,9 @@ header {
     padding: 0 20px;
     color: #fff;
     letter-spacing: -0.01em; }
+    @media screen and (max-width: 600px) {
+      #nav-menu li {
+        font-size: 12px; } }
 
 .profile-wrapper {
   width: 80%;
@@ -217,8 +223,8 @@ img {
       height: 10rem; } }
   @media screen and (max-width: 600px) {
     img {
-      width: 8rem;
-      height: 8rem; } }
+      width: 6rem;
+      height: 6rem; } }
 
 .profile-des {
   width: 62%; }
